[gd_scene load_steps=21 format=3 uid="uid://s100ffyr4t4b"]

[ext_resource type="PackedScene" uid="uid://ococlv6nppei" path="res://player.tscn" id="1_3ds22"]
[ext_resource type="Script" path="res://level_manager.gd" id="1_6uemr"]
[ext_resource type="PackedScene" uid="uid://66cq81pae46e" path="res://conveyor_belt/conveyor_belt.tscn" id="2_g8fnw"]
[ext_resource type="PackedScene" uid="uid://d3pfwmklj5onn" path="res://fabricator/fabricator.tscn" id="4_f16n8"]
[ext_resource type="PackedScene" uid="uid://brhtnfmaq24gq" path="res://conveyor_belt/conveyor_belt_corner_left.tscn" id="4_icgp5"]
[ext_resource type="PackedScene" uid="uid://dyxiacs3mgcxm" path="res://conveyor_belt/conveyor_belt_corner_right.tscn" id="5_0jfns"]
[ext_resource type="Material" uid="uid://lcydcscaw8u5" path="res://materials/material3.tres" id="5_581ov"]
[ext_resource type="Material" uid="uid://c1l6qvkid4c5r" path="res://materials/material1.tres" id="5_h8ati"]
[ext_resource type="Material" uid="uid://byel40iv30re8" path="res://materials/material2.tres" id="5_toec6"]
[ext_resource type="PackedScene" uid="uid://dsnvdyuyxwryo" path="res://pipe/pipe.tscn" id="10_4a8f0"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_asw3o"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_eij3v"]
sky_material = SubResource("ProceduralSkyMaterial_asw3o")

[sub_resource type="Environment" id="Environment_3qf37"]
background_mode = 2
sky = SubResource("Sky_eij3v")
tonemap_mode = 2
tonemap_exposure = 0.8
adjustment_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_62q77"]
albedo_color = Color(0.8, 0.356863, 0.356863, 1)

[sub_resource type="PlaceholderMesh" id="PlaceholderMesh_fqjkd"]

[sub_resource type="TextMesh" id="TextMesh_ekwhe"]
text = "Next item:"

[sub_resource type="TextMesh" id="TextMesh_rqijt"]
text = "Coming up:"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rf0lw"]
albedo_color = Color(0.8, 0.356863, 0.356863, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nmdi3"]
albedo_color = Color(0.8, 0.356863, 0.356863, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ow0cb"]
size = Vector3(1, 6.34, 4.08)

[node name="Stage1" type="Node3D"]
script = ExtResource("1_6uemr")
MIN_SPAWN_DELAY = 7.0
MAX_SPAWN_DELAY = 12.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3qf37")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 83.9617, 33.6129, 0)
light_energy = 16.0
light_specular = 0.4
shadow_enabled = true
shadow_opacity = 0.8
distance_fade_shadow = 0.0
omni_range = 100.0

[node name="Player" parent="." instance=ExtResource("1_3ds22")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 84.9625, 5.6542, 0)
SPINT_USE_RATE = 0.4
SPINT_RECHARGE_RATE = 0.3

[node name="Walls" type="Node3D" parent="."]

[node name="CSGBox3D2" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 77.3902, 17.3576, 49.7639)
use_collision = true
size = Vector3(96.315, 35.4075, 1)
material = ExtResource("5_581ov")

[node name="CSGBox3D7" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 78.8512, 0, 7.02448)
use_collision = true
size = Vector3(92.378, 0.001, 90.6404)
material = ExtResource("5_581ov")

[node name="CSGBox3D8" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 78.8512, 34.5676, 7.02448)
use_collision = true
size = Vector3(92.378, 0.001, 90.6404)
material = ExtResource("5_581ov")

[node name="CSGBox3D4" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 77.3902, 17.3576, -36.7119)
use_collision = true
size = Vector3(96.315, 35.4075, 1)
material = ExtResource("5_581ov")

[node name="CSGBox3D3" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 34.4334, 17.3576, -0.137722)
use_collision = true
size = Vector3(280.025, 35.4075, 1)
material = ExtResource("5_581ov")

[node name="CSGBox3D5" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 123.102, 17.3576, -0.137722)
use_collision = true
size = Vector3(280.025, 35.4075, 1)
material = ExtResource("5_581ov")

[node name="CSGBox3D" type="CSGBox3D" parent="Walls/CSGBox3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.7292, -14.3543, -4.42362)
operation = 2
size = Vector3(3.66, 6, 10.146)
material = ExtResource("5_toec6")

[node name="CSGBox3D3" type="CSGBox3D" parent="Walls/CSGBox3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.7292, -7.9967, 0.176422)
size = Vector3(3.66, 4.763, 1.00082)
material = ExtResource("5_toec6")

[node name="CSGBox3D4" type="CSGBox3D" parent="Walls/CSGBox3D5/CSGBox3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.445221)
operation = 2
size = Vector3(3.06, 4.215, 0.123669)
material = ExtResource("5_h8ati")

[node name="ExpectedItemDisplay1" type="MeshInstance3D" parent="Walls/CSGBox3D5/CSGBox3D3/CSGBox3D4"]
transform = Transform3D(1.33, 0, 0, 0, 1.33, 0, 0, 0, 1.33, 0, -1.18683, -0.700134)
material_override = SubResource("StandardMaterial3D_62q77")
mesh = SubResource("PlaceholderMesh_fqjkd")

[node name="ExpectedItemDisplay1Small" type="MeshInstance3D" parent="Walls/CSGBox3D5/CSGBox3D3/CSGBox3D4"]
transform = Transform3D(0.705, 0, 0, 0, 0.705, 0, 0, 0, 0.705, 0, 0.874923, -0.331345)
material_override = SubResource("StandardMaterial3D_62q77")
mesh = SubResource("PlaceholderMesh_fqjkd")

[node name="Text" type="MeshInstance3D" parent="Walls/CSGBox3D5/CSGBox3D3/CSGBox3D4"]
transform = Transform3D(1.81, 0, 0, 0, 1.81, 0, 0, 0, 1.81, 0, -0.141851, -0.087)
mesh = SubResource("TextMesh_ekwhe")

[node name="Text2" type="MeshInstance3D" parent="Walls/CSGBox3D5/CSGBox3D3/CSGBox3D4"]
transform = Transform3D(1.81, 0, 0, 0, 1.81, 0, 0, 0, 1.81, 0, 1.6145, -0.087)
mesh = SubResource("TextMesh_rqijt")

[node name="CSGBox3D2" type="CSGBox3D" parent="Walls/CSGBox3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.7292, -14.3543, -4.47635)
size = Vector3(3.845, 6.05, 10.0127)
material = ExtResource("5_toec6")

[node name="CSGBox3D3" type="CSGBox3D" parent="Walls/CSGBox3D5/CSGBox3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.166468, 1.66421)
operation = 2
size = Vector3(2.95, 5.65, 13.3356)
material = ExtResource("5_toec6")

[node name="CSGBox3D4" type="CSGBox3D" parent="Walls/CSGBox3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 39.2708, -14.3543, -4.42362)
operation = 2
size = Vector3(3.66, 6, 10.146)
material = ExtResource("5_toec6")

[node name="CSGBox3D5" type="CSGBox3D" parent="Walls/CSGBox3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 39.2708, -7.9967, 0.176422)
size = Vector3(3.66, 4.763, 1.00082)
material = ExtResource("5_toec6")

[node name="CSGBox3D4" type="CSGBox3D" parent="Walls/CSGBox3D5/CSGBox3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.445221)
operation = 2
size = Vector3(3.06, 4.215, 0.123669)
material = ExtResource("5_toec6")

[node name="ExpectedItemDisplay2" type="MeshInstance3D" parent="Walls/CSGBox3D5/CSGBox3D5/CSGBox3D4"]
transform = Transform3D(1.33, 0, 0, 0, 1.33, 0, 0, 0, 1.33, 0, -1.18683, -0.700134)
material_override = SubResource("StandardMaterial3D_rf0lw")
mesh = SubResource("PlaceholderMesh_fqjkd")

[node name="ExpectedItemDisplay2Small" type="MeshInstance3D" parent="Walls/CSGBox3D5/CSGBox3D5/CSGBox3D4"]
transform = Transform3D(0.705, 0, 0, 0, 0.705, 0, 0, 0, 0.705, 0, 0.874923, -0.331345)
material_override = SubResource("StandardMaterial3D_nmdi3")
mesh = SubResource("PlaceholderMesh_fqjkd")

[node name="Text" type="MeshInstance3D" parent="Walls/CSGBox3D5/CSGBox3D5/CSGBox3D4"]
transform = Transform3D(1.81, 0, 0, 0, 1.81, 0, 0, 0, 1.81, 0, -0.141851, -0.087)
mesh = SubResource("TextMesh_ekwhe")

[node name="Text2" type="MeshInstance3D" parent="Walls/CSGBox3D5/CSGBox3D5/CSGBox3D4"]
transform = Transform3D(1.81, 0, 0, 0, 1.81, 0, 0, 0, 1.81, 0, 1.6145, -0.087)
mesh = SubResource("TextMesh_rqijt")

[node name="CSGBox3D6" type="CSGBox3D" parent="Walls/CSGBox3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 39.2708, -14.3543, -4.47635)
size = Vector3(3.845, 6.05, 10.0127)
material = ExtResource("5_toec6")

[node name="CSGBox3D3" type="CSGBox3D" parent="Walls/CSGBox3D5/CSGBox3D6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.166468, 1.66421)
operation = 2
size = Vector3(2.95, 5.65, 13.3356)
material = ExtResource("5_toec6")

[node name="Belts" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 91.4651, 0, 0)

[node name="ConveyorBelt2" parent="Belts" instance=ExtResource("2_g8fnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36.116, 0, -19.863)

[node name="ConveyorBelt3" parent="Belts" instance=ExtResource("2_g8fnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 26.116, 0, -19.863)

[node name="ConveyorBelt4" parent="Belts" instance=ExtResource("2_g8fnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.116, 0, -19.863)

[node name="ConveyorBelt5" parent="Belts" instance=ExtResource("2_g8fnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.11603, 0, -19.863)

[node name="ConveyorBelt6" parent="Belts" instance=ExtResource("2_g8fnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.88397, 0, -19.863)

[node name="ConveyorBelt7" parent="Belts" instance=ExtResource("2_g8fnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.884, 0, -19.863)

[node name="ConveyorBelt8" parent="Belts" instance=ExtResource("2_g8fnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.884, 0, -19.863)

[node name="ConveyorBelt9" parent="Belts" instance=ExtResource("2_g8fnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -33.884, 0, -19.863)

[node name="ConveyorBelt10" parent="Belts" instance=ExtResource("2_g8fnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36.116, 0, 39.137)

[node name="ConveyorBelt11" parent="Belts" instance=ExtResource("2_g8fnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 26.116, 0, 39.137)

[node name="ConveyorBelt12" parent="Belts" instance=ExtResource("2_g8fnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.116, 0, 39.137)

[node name="ConveyorBelt13" parent="Belts" instance=ExtResource("2_g8fnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.11603, 0, 39.137)

[node name="ConveyorBelt14" parent="Belts" instance=ExtResource("2_g8fnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.88397, 0, 39.137)

[node name="ConveyorBelt15" parent="Belts" instance=ExtResource("2_g8fnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.884, 0, 39.137)

[node name="ConveyorBelt16" parent="Belts" instance=ExtResource("2_g8fnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.884, 0, 39.137)

[node name="ConveyorBelt17" parent="Belts" instance=ExtResource("2_g8fnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -33.884, 0, 39.137)

[node name="ConveyorBeltCornerLeft" parent="Belts" instance=ExtResource("4_icgp5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -43.6057, 0, -19.8694)

[node name="ConveyorBeltCornerRight" parent="Belts" instance=ExtResource("5_0jfns")]
transform = Transform3D(-4.37114e-08, -0.00174533, -0.999999, 0, 0.999998, -0.00174533, 1, -7.62907e-11, -4.37113e-08, -42.422, -9.53674e-07, 37.6492)

[node name="Fabricators" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 63.1229, 0, 0)

[node name="Fabricator" parent="Fabricators" instance=ExtResource("4_f16n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.6664, 0, -3.19724)

[node name="Fabricator2" parent="Fabricators" instance=ExtResource("4_f16n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.6664, 0, 10.8714)
output = "PrismMesh"

[node name="Fabricator3" parent="Fabricators" instance=ExtResource("4_f16n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.6664, 0, 25.2637)
output = "TubeTrailMesh"

[node name="ItemSpawnPoints" type="Node3D" parent="."]

[node name="SpawnPoint1" type="Node3D" parent="ItemSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 49.3374, 24.125, -22.8464)

[node name="SpawnTimer1" type="Timer" parent="ItemSpawnPoints/SpawnPoint1"]
wait_time = 5.0
autostart = true

[node name="SpawnPoint2" type="Node3D" parent="ItemSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 49.033, 24.5681, 41.7304)

[node name="SpawnTimer2" type="Timer" parent="ItemSpawnPoints/SpawnPoint2"]
wait_time = 4.0
autostart = true

[node name="ItemDestinations" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 128.231, 0, 0)

[node name="Id1" type="Area3D" parent="ItemDestinations"]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="ItemDestinations/Id1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.83051, 3.05423, -19.8431)
shape = SubResource("BoxShape3D_ow0cb")

[node name="Id2" type="Area3D" parent="ItemDestinations"]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="ItemDestinations/Id2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.83051, 3.05423, 39.1674)
shape = SubResource("BoxShape3D_ow0cb")

[node name="Pipes" type="Node3D" parent="."]

[node name="Pipe" parent="Pipes" instance=ExtResource("10_4a8f0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 49.0179, 25.367, 41.8995)

[node name="Pipe2" parent="Pipes" instance=ExtResource("10_4a8f0")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 49.319, 25.367, -22.8063)

[node name="Items" type="Node3D" parent="."]

[connection signal="timeout" from="ItemSpawnPoints/SpawnPoint1/SpawnTimer1" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="ItemSpawnPoints/SpawnPoint2/SpawnTimer2" to="." method="_on_spawn_timer_2_timeout"]
[connection signal="body_entered" from="ItemDestinations/Id1" to="." method="_on_id_1_body_entered"]
[connection signal="body_entered" from="ItemDestinations/Id2" to="." method="_on_id_2_body_entered"]
